@@ -6,6 +6,7 @@ release 0.14.7
 	* added wait_for_alert to python binding
 	* improved invalid filename character replacement
 	* improved forward compatibility in DHT
+	* added set_piece_hashes that takes a callback to the python binding
 
 release 0.14.6
 
